some minor bug fixed

--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "@ethico/fakerandom",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "This is a random data generator package for generating different types of data",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "random",
+    "data",
+    "generator",
+    "faker",
+    "mock",
+    "test",
+    "utility"
+  ],
   "author": "Shariar Hasan",
-  "license": "MIT",
-  "dependencies": {
-    "@ethico/fakeuuid": "^1.0.0"
-  }
+  "license": "MIT"
 }
